<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/my_profile"/>

    <item
        android:id="@+id/favourites"
        android:icon="@drawable/favourite"
        android:title="@string/favourite_restaurants"/>

    <item
        android:id="@+id/orderHistory"
        android:icon="@drawable/history"
        android:title="@string/order_history"/>

    <item
        android:id="@+id/faq"
        android:icon="@drawable/faq"
        android:title="@string/faqs"/>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/log_out"/>

    </group>

</menu>