<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.Forgot_Activity"
    android:background="#ffffff"
    android:id="@+id/rlContent">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/login"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="18sp"
        android:textColor="#b71c1c"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"/>

    <EditText
        android:id="@+id/etMobileNumber3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInstruction"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etMailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber3"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMailAddress"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:background="#b71c1c"
        android:padding="6dp"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>