<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_margin="6dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rlContent">

    <ImageView
        android:id="@+id/imgRestaurantImage"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"
        android:scaleType="centerCrop"/>


    <TextView
        android:id="@+id/txtRestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/restaurant_name"
        android:layout_toRightOf="@id/imgRestaurantImage"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:padding="5dp"/>

    <ImageView
        android:id="@+id/imgRupees"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/rupees"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/txtRestaurantName"
        android:layout_toRightOf="@id/imgRestaurantImage"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_299"
        android:textSize="15sp"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:layout_marginHorizontal="35dp"
        android:layout_below="@id/txtRestaurantName"
        android:layout_toRightOf="@id/imgRestaurantImage"/>

    <TextView
        android:id="@+id/txtRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_5"
        android:textColor="#fbc02d"
        android:layout_alignParentRight="true"
        android:layout_marginTop="63dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"/>

    <ImageView
        android:id="@+id/imgFav"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/fav2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"/>


</RelativeLayout>

</androidx.cardview.widget.CardView>